# gxde-deb-installer

./: .gitignore  CMakeLists.txt  README.md  debinstaller.cpp  debinstaller.h  deblistmodel.cpp  deblistmodel.h  deepin-deb-installer.desktop  gxde-deb-installer.applications  gxde-deb-installer.desktop  main.cpp  packageslistdelegate.cpp  packagesmanager.cpp  packagesmanager.h  singleinstallpage.cpp  singleinstallpage.h  translate_generation.sh  translate_src2ts.sh  turnpackagearchitecture.cpp  turnpackagearchitecture.h  uninstallconfirmpage.cpp
debian/: changelog  control  copyright  postinst  rules
resources/: amd64-to-all.sh  loongarch-to-loong64.sh  loongarch64-to-mips64el.sh  resources.qrc
resources/theme/dark/: dark.qss
resources/theme/light/: light.qss
translations/: gxde-deb-installer.ts  gxde-deb-installer_am_ET.ts  gxde-deb-installer_ar.ts  gxde-deb-installer_bg.ts  gxde-deb-installer_ca.ts  gxde-deb-installer_cs.ts  gxde-deb-installer_da.ts  gxde-deb-installer_de.ts  gxde-deb-installer_en_AU.ts  gxde-deb-installer_es.ts  gxde-deb-installer_es_419.ts  gxde-deb-installer_et.ts  gxde-deb-installer_fi.ts  gxde-deb-installer_fr.ts  gxde-deb-installer_gl_ES.ts  gxde-deb-installer_he.ts  gxde-deb-installer_hi_IN.ts  gxde-deb-installer_hr.ts  gxde-deb-installer_hu.ts  gxde-deb-installer_id.ts  gxde-deb-installer_it.ts  gxde-deb-installer_ko.ts  gxde-deb-installer_lt.ts  gxde-deb-installer_mn.ts  gxde-deb-installer_ms.ts  gxde-deb-installer_ne.ts  gxde-deb-installer_nl.ts  gxde-deb-installer_pa.ts  gxde-deb-installer_pl.ts  gxde-deb-installer_pt.ts  gxde-deb-installer_pt_BR.ts  gxde-deb-installer_ru.ts  gxde-deb-installer_sk.ts  gxde-deb-installer_sl.ts  gxde-deb-installer_sr.ts  gxde-deb-installer_tr.ts  gxde-deb-installer_uk.ts  gxde-deb-installer_zh_CN.ts  gxde-deb-installer_zh_TW.ts
